denuncias-prod/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-23T15:44:18Z"
    labels:
      app: api-integracion
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: api-integracion
    namespace: denuncias-prod
    resourceVersion: "9845558"
    uid: b2d2d282-ccbe-4487-bfe9-c031345ff56b
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-23T15:44:18Z"
    labels:
      app: dptc-serv001-denuncia
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: dptc-serv001-denuncia
    namespace: denuncias-prod
    resourceVersion: "9845561"
    uid: ddc2fced-4507-45e6-89de-0c9b6e053247
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-23T15:44:18Z"
    labels:
      app: dptc-serv002-bff
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: dptc-serv002-bff
    namespace: denuncias-prod
    resourceVersion: "9845563"
    uid: 96b10a0d-0d8e-4d09-ad2a-4ef352dd4a4c
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-23T15:44:18Z"
    labels:
      app: front001-denuncias
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: front001-denuncias
    namespace: denuncias-prod
    resourceVersion: "9845567"
    uid: faf76898-3487-4329-826a-238a2b5fd00e
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-23T15:44:19Z"
    labels:
      app: proxy001-serv-externos
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: proxy001-serv-externos
    namespace: denuncias-prod
    resourceVersion: "9845574"
    uid: 2e24616a-65d3-4dae-a814-5b23795d17d6
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
