denuncias-prod/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-23T15:44:20Z"
    generateName: api-integracion-
    generation: 1
    labels:
      app: api-integracion
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: api-integracion
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: api-integracion-dtm62
    namespace: denuncias-prod
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: api-integracion
      uid: 7c8df62e-319d-458f-af4d-d7879f07ecde
    resourceVersion: "476054050"
    uid: c8d8597b-0ca1-428a-9b34-d2587aca63b0
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-23T15:44:20Z"
    generateName: dptc-serv001-denuncia-
    generation: 1
    labels:
      app: dptc-serv001-denuncia
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: dptc-serv001-denuncia
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: dptc-serv001-denuncia-vsprn
    namespace: denuncias-prod
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: dptc-serv001-denuncia
      uid: 2a962a0e-4b9b-425a-b258-21079627e9fe
    resourceVersion: "476054103"
    uid: a0549a5b-1ecb-409c-95fb-06c8fb051747
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-23T15:44:20Z"
    generateName: dptc-serv002-bff-
    generation: 1
    labels:
      app: dptc-serv002-bff
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: dptc-serv002-bff
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: dptc-serv002-bff-sdz2g
    namespace: denuncias-prod
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: dptc-serv002-bff
      uid: 0df00edc-572f-4e95-8465-875d2757f73a
    resourceVersion: "476054014"
    uid: eb55a154-ce50-45c3-993c-b71d85e15ed5
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-23T15:44:20Z"
    generateName: front001-denuncias-
    generation: 1
    labels:
      app: front001-denuncias
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: front001-denuncias
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: front001-denuncias-rv8nh
    namespace: denuncias-prod
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: front001-denuncias
      uid: 37df4a59-a1a3-4bac-ad01-e3975fc212c0
    resourceVersion: "476066973"
    uid: 4d3777be-321d-4b3c-bca5-801b542552a7
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-23T15:44:20Z"
    generateName: proxy001-serv-externos-
    generation: 1
    labels:
      app: proxy001-serv-externos
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: proxy001-serv-externos
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: proxy001-serv-externos-rsmbz
    namespace: denuncias-prod
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: proxy001-serv-externos
      uid: d311f364-79b7-48fd-9ec4-a8e300e675fe
    resourceVersion: "476054112"
    uid: 01351d32-829b-4058-923f-f3194374f964
  ports: null
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
