denuncias-prod/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 2m
    creationTimestamp: "2023-05-23T15:44:19Z"
    labels:
      app: api-integracion
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: api-integracion
    namespace: denuncias-prod
    resourceVersion: "9845617"
    uid: 6a5e3b41-bd6e-47ab-9fba-e23c2fa54ed1
  spec:
    host: api-integracion-denuncias.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    tls:
      insecureEdgeTerminationPolicy: Allow
      termination: edge
    to:
      kind: Service
      name: api-integracion
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-23T15:44:19Z"
        status: "True"
        type: Admitted
      host: api-integracion-denuncias.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 2m
    creationTimestamp: "2023-05-23T15:44:19Z"
    labels:
      app: api-integracion
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: api-integracion-public
    namespace: denuncias-prod
    resourceVersion: "9845613"
    uid: f8d953b2-da35-4b12-baf2-92fed3da36a5
  spec:
    host: api-integracion-denuncias.api.dirtrab.cl
    port:
      targetPort: 8080-tcp
    tls:
      caCertificate: |
        -----BEGIN CERTIFICATE-----
        MIIGGTCCBAGgAwIBAgIQE31TnKp8MamkM3AZaIR6jTANBgkqhkiG9w0BAQwFADCB
[...]
        MntHWpdLgtJmwsQt6j8k9Kf5qLnjatkYYaA7jBU=
        -----END CERTIFICATE-----
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIHAzCCBeugAwIBAgIRAOFJjF2X3t8Io3XrgnCs7ckwDQYJKoZIhvcNAQELBQAw
[...]
        K/BoiKHmiPhYw9gbMIYl7qELU5BehE8=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Allow
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAyRZv6nUtOGBmALfAVtdmMQb5Jm51rc7CP7t0cw2peCwig1xC
[...]
        wq1nwN4xIyvJqfeVidr8Usc+jUzv86g1JNd129WSVsWILhL9h5u7xA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: api-integracion
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-23T15:44:19Z"
        status: "True"
        type: Admitted
      host: api-integracion-denuncias.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 5m
    creationTimestamp: "2023-05-23T15:44:19Z"
    labels:
      app: dptc-serv001-denuncia
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: dptc-serv001-denuncia
    namespace: denuncias-prod
    resourceVersion: "9845625"
    uid: 3448e5dc-d917-4eb5-91a3-91b6be4a66f3
  spec:
    host: dptc-serv001-denuncias.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    tls:
      termination: edge
    to:
      kind: Service
      name: dptc-serv001-denuncia
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-23T15:44:19Z"
        status: "True"
        type: Admitted
      host: dptc-serv001-denuncias.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 1m
    creationTimestamp: "2023-05-23T15:44:19Z"
    labels:
      app: dptc-serv002-bff
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: dptc-serv002-bff
    namespace: denuncias-prod
    resourceVersion: "9845630"
    uid: 0a9c3034-b433-4418-a45f-9a39e695c4cc
  spec:
    host: dptc-serv002-denuncias.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    tls:
      termination: edge
    to:
      kind: Service
      name: dptc-serv002-bff
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-23T15:44:19Z"
        status: "True"
        type: Admitted
      host: dptc-serv002-denuncias.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 2m
    creationTimestamp: "2023-05-23T15:44:19Z"
    labels:
      app: front001-denuncias
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: front001-denuncias
    namespace: denuncias-prod
    resourceVersion: "9845639"
    uid: eb581e35-209e-4717-a18e-c2d09a74c49c
  spec:
    host: front001-denuncias.api-cloud.dirtrab.cl
    port:
      targetPort: 3000-tcp
    tls:
      termination: edge
    to:
      kind: Service
      name: front001-denuncias
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-23T15:44:19Z"
        status: "True"
        type: Admitted
      host: front001-denuncias.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 2m
    creationTimestamp: "2023-05-23T15:44:19Z"
    labels:
      app: front001-denuncias
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: front001-denuncias-public
    namespace: denuncias-prod
    resourceVersion: "9845636"
    uid: 9533796b-a052-4e46-8d53-cbd8e38ac5c9
  spec:
    host: front001-denuncias.dirtrab.cl
    port:
      targetPort: 3000-tcp
    tls:
      caCertificate: "-----BEGIN CERTIFICATE-----\r\nMIIETjCCAzagAwIBAgINAe5fIh38YjvUMzqFVzANBgkqhkiG9w0BAQsFADBMMSAw\r\nHgYDVQQLExdHbG9iYWxTaWduIFJvb3QgQ0EgLSBSMzETMBEGA1UEChMKR2xvYmFs\r\nU2lnbjETMBEGA1UEAxMKR2xvYmFsU2lnbjAeFw0xODExMjEwMDAwMDBaFw0yODEx\r\nMjEwMDAwMDBaMFAxCzAJBgNVBAYTAkJFMRkwFwYDVQQKExBHbG9iYWxTaWduIG52\r\nLXNhMSYwJAYDVQQDEx1HbG9iYWxTaWduIFJTQSBPViBTU0wgQ0EgMjAxODCCASIw\r\nDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBAKdaydUMGCEAI9WXD+uu3Vxoa2uP\r\nUGATeoHLl+6OimGUSyZ59gSnKvuk2la77qCk8Hu [...]
        CERTIFICATE-----\r\n-----BEGIN CERTIFICATE-----\r\nMIIDXzCCAkegAwIBAgILBAAAAAABIVhTCKIwDQYJKoZIhvcNAQELBQAwTDEgMB4G\r\nA1UECxMXR2xvYmFsU2lnbiBSb290IENBIC0gUjMxEzARBgNVBAoTCkdsb2JhbFNp\r\nZ24xEzARBgNVBAMTCkdsb2JhbFNpZ24wHhcNMDkwMzE4MTAwMDAwWhcNMjkwMzE4\r\nMTAwMDAwWjBMMSAwHgYDVQQLExdHbG9iYWxTaWduIFJvb3QgQ0EgLSBSMzETMBEG\r\nA1UEChMKR2xvYmFsU2lnbjETMBEGA1UEAxMKR2xvYmFsU2lnbjCCASIwDQYJKoZI\r\nhvcNAQEBBQADggEPADCCAQoCggEBAMwldpB5BngiFvXAg7aEyiie/QV2EcWtiHL8\r\nRgJDx7KKnQRfJMsuS+FggkbhUqsMgUdwb [...]
        CERTIFICATE-----\r\n"
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIGWDCCBUCgAwIBAgIMI/tAhw6UIKHh2s0MMA0GCSqGSIb3DQEBCwUAMFAxCzAJ
[...]
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Allow
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAwNuxZ8svU9wQ6R+47H8iBj7XZxIbkNpl3lkUoYxaEfK62SV9
[...]
        A5CaNyoTlkk4zFLuv9IuMwk2IKWSwwCSWztAAhaubgikOhAu4AVcMg==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: front001-denuncias
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-23T15:44:19Z"
        status: "True"
        type: Admitted
      host: front001-denuncias.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 2m
    creationTimestamp: "2023-05-23T15:44:20Z"
    labels:
      app: proxy001-serv-externos
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: proxy001-serv-externos
    namespace: denuncias-prod
    resourceVersion: "9845641"
    uid: a12333e9-4b95-44be-ae81-7af6be780a9a
  spec:
    host: proxy001-denuncias-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    tls:
      insecureEdgeTerminationPolicy: Allow
      termination: edge
    to:
      kind: Service
      name: proxy001-serv-externos
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-23T15:44:20Z"
        status: "True"
        type: Admitted
      host: proxy001-denuncias-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
