denuncias-prod/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-23T15:44:20Z"
    labels:
      app: api-integracion
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: api-integracion
    namespace: denuncias-prod
    resourceVersion: "9845643"
    uid: 7c8df62e-319d-458f-af4d-d7879f07ecde
  spec:
    clusterIP: 172.30.117.210
    clusterIPs:
    - 172.30.117.210
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: api-integracion
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-23T15:44:20Z"
    labels:
      app: dptc-serv001-denuncia
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: dptc-serv001-denuncia
    namespace: denuncias-prod
    resourceVersion: "9845646"
    uid: 2a962a0e-4b9b-425a-b258-21079627e9fe
  spec:
    clusterIP: 172.30.176.212
    clusterIPs:
    - 172.30.176.212
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: dptc-serv001-denuncia
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-23T15:44:20Z"
    labels:
      app: dptc-serv002-bff
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: dptc-serv002-bff
    namespace: denuncias-prod
    resourceVersion: "9845650"
    uid: 0df00edc-572f-4e95-8465-875d2757f73a
  spec:
    clusterIP: 172.30.21.51
    clusterIPs:
    - 172.30.21.51
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: dptc-serv002-bff
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-23T15:44:20Z"
    labels:
      app: front001-denuncias
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: front001-denuncias
    namespace: denuncias-prod
    resourceVersion: "9845653"
    uid: 37df4a59-a1a3-4bac-ad01-e3975fc212c0
  spec:
    clusterIP: 172.30.183.171
    clusterIPs:
    - 172.30.183.171
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 3000-tcp
      port: 3000
      protocol: TCP
      targetPort: 3000
    selector:
      deploymentconfig: front001-denuncias
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-23T15:44:20Z"
    labels:
      app: proxy001-serv-externos
      migration.openshift.io/migrated-by-migmigration: 76860916-2889-42b2-b3cf-627f0e3c9911
      migration.openshift.io/migrated-by-migplan: 19adcece-7178-4e54-99cc-22dd4003dc83
      velero.io/backup-name: migration-9de6e-initial-sdb6w
      velero.io/restore-name: migration-9de6e-final-gmwtj
    name: proxy001-serv-externos
    namespace: denuncias-prod
    resourceVersion: "9845657"
    uid: d311f364-79b7-48fd-9ec4-a8e300e675fe
  spec:
    clusterIP: 172.30.200.114
    clusterIPs:
    - 172.30.200.114
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: proxy001-serv-externos
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
